<resources>
    <string name="app_name">Cabme</string>
    <string name="cabme">CABME</string>
    <string name="get_started">Get started</string>
    <string name="this_number_will_be_used_for_all_rides_related_communication_you_will_recieve_a_verification_code">This number will be used for all rides-related communication. you will recieve a verification code</string>
    <string name="enter_phone_number_for_verification">Enter Phone number for verification</string>
    <string name="_91">1234–567-890</string>
    <string name="next">NEXT</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="textview">Please wait....</string>
    <string name="we_will_verify_the_otp_sent">We will verify the OTP sent</string>
    <string name="verify">Verify</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="password">password</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="user_login">User Login</string>
    <string name="account_doesn_t_exist_register_here">Account doesn\'t exist? Register here</string>
    <string name="login">Login</string>
    <string name="continueBtn">Continue</string>
    <string name="Continue" />
    <string name="set_up_your_cabme_account">Set up your CABME Account</string>
    <string name="already_registered_login_here">Already registered login here</string>
    <string name="welcome_to_cabme">Welcome to Cabme</string>
    <string name="have_a_hassle_free_booking_experience_bi_givingus_the_following_permission">Have a hassle-free booking experience by giving us the following permission</string>
    <string name="location_for_finding_rides">- Location (for finding rides)</string>
    <string name="phone_for_account_verification">- Phone (For account verification)</string>
    <string name="allow">Allow</string>
    <string name="gps_turned_off">GPS turned off</string>
    <string name="allow_cabme_to_turn_on_your_gps_for_accurate_pickups">Allow Cabme to turn on your GPS for accurate pickups</string>
    <string name="turn_on_gps">Turn on GPS</string>
    <string name="how_will_you_pay_for_your_rides">How will you pay for your rides?</string>
    <string name="choose_a_digital_method_here_and_enjoy_fabulous_offers_on_your_rides">Choose a digital method here and enjoy fabulous offers on your rides!</string>
    <string name="add_paiment_methods">Add payment methods</string>
    <string name="add_a_credit_debit_card">Add a credit/Debit Card</string>
    <string name="cash">Cash</string>
    <string name="add_google_pay_upi_id">Add Google Pay /UPI ID</string>
    <string name="done">Done</string>
    <string name="continueBtn3">continue</string>
    <string name="add_existing_upi_id">Add existing UPI ID</string>
    <string name="this_upi_id_will_be_used_for_your_payments">This UPI ID will be used for your payments.</string>
    <string name="authenticate">Authenticate</string>
    <string name="example_okaxis">example@okaxis</string>
</resources>